--- a/hades.cabal
+++ b/hades.cabal
@@ -22,6 +22,17 @@ data-files:
    share/hades/hades-gtk.css
    share/hades/report.css
    share/hades/welcome.svg
+   share/hades/documentation/Manual.html
+   share/hades/documentation/Manual.pdf
+   share/hades/documentation/Support.html
+   share/hades/documentation/theme.css
+   share/hades/documentation/LICENSE.txt
+   share/hades/docx/docProps/*.xml
+   share/hades/docx/word/_rels/document.xml.rels
+   share/hades/docx/word/theme/theme1.xml
+   share/hades/docx/word/*.xml
+   share/hades/examples/*.dsm
+
 
 library
    exposed-modules:
