--- a/cabal.project
+++ b/cabal.project
@@ -1,5 +1,6 @@
 packages:
    banana-ui/base/banana-ui-base.cabal
    banana-ui/gtk/banana-ui-gtk.cabal
+   banana-ui/webits/webits.cabal
    dsm/dsm.cabal
-   hades.cabal
+   hades/hades.cabal
