--- a/dsm/dsm.cabal
+++ b/dsm/dsm.cabal
@@ -49,8 +49,8 @@ library
    ghc-options:        -Wall
    build-depends:
       aeson,
-      banana-ui-base,
-      banana-ui-gtk,
+      banana-ui-base == 2.0.0,
+      banana-ui-gtk == 2.0.0,
       base >=4.14 && < 4.15,
       base64-bytestring,
       colour,
@@ -60,7 +60,7 @@ library
       gi-gtk,
       gi-pango,
       gi-pangocairo,
-      hades,
+      hades == 2.0.0,
       lens,
       mtl,
       reactive-banana,
@@ -83,8 +83,8 @@ executable dsm
                         ViewPatterns
    build-depends:
       aeson,
-      banana-ui-base,
-      banana-ui-gtk,
+      banana-ui-base == 2.0.0,
+      banana-ui-gtk == 2.0.0,
       base >=4.14 && < 4.15,
       base64-bytestring,
       containers,
