--- a/stack.yaml
+++ b/stack.yaml
@@ -8,13 +8,14 @@ packages:
    - dsm
    - banana-ui/base
    - banana-ui/gtk
+   - banana-ui/webits
 
 
 allow-newer: true
    # Work-around for extra-deps javascript-bridge and the gi-cairo-* packages.
 
 extra-deps:
-   # - blank-canvas-0.7.3
+   - blank-canvas-0.7.3
    - cairo-0.13.8.1
    - cipher-aes128-0.7.0.5
    - DRBG-0.5.5
@@ -24,6 +25,7 @@ extra-deps:
    - gi-rsvg-2.0.2
    - hjpath-3.0.1
    - hjson-1.3.2
+   - image-type-0.1.0.0
    - javascript-bridge-0.2.0
    - kansas-comet-0.4
    - lens-xml-0.1.0.0
